feat: add book search by title, author and topic
